cli/tests/ui/policy_unknown_use.stderr
Error: manifest::unknown_policy_use

  × check failed
  ╰─▶ policy reference points to governance `use` entry `#missing`, but this
      manifest does not declare that entry
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/policy_unknown_use.json5:3:14]
 2 │   manifest_version: "0.4.0",
 3 │   policies: ["#missing.rewrite"],
   ·              ─────────┬────────
   ·                       ╰── policy reference expects a matching `use.missing` entry
 4 │ }
   ╰────
  help: Add a `use` entry named `missing` in this manifest, or change/remove
        the policy reference.
